# FORMULAIRES

project_form_auto/: .gitignore  README.md  pyproject.toml  sample_form.html
project_form_auto/app/: main.py
project_form_auto/app/models/: schemas.py
project_form_auto/app/project_form_auto/routers/: health.py
project_form_auto/app/routers/: autofill.py  form_analyzer.py  form_detect.py  form_map.py  health.py  user_data.py
project_form_auto/app/services/: autofiller.py  field_mapper.py  form_analyzer.py  form_detector.py  from_analyzer.py  scraper.py  user_store.py
project_form_auto/extension/: config.js  content.js  manifest.json  popup.html  popup.js  style.css
project_form_auto/notebooks/: experiments.ipynb  experiments_remplissage.ipynb
